{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 535,
  "lineage": "15cb65ae-09e6-9dc5-9489-eb7346b29735",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "ansible_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-071ee3b507ed20a1c",
            "association_id": "eipassoc-0dcf13af639b8a478",
            "domain": "vpc",
            "id": "eipalloc-071ee3b507ed20a1c",
            "instance": "i-0efe7449b0eb7bd99",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0ddb16572f9ed817d",
            "private_dns": "ip-10-0-1-235.sa-east-1.compute.internal",
            "private_ip": "10.0.1.235",
            "public_dns": "ec2-54-94-108-98.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.94.108.98",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ansible_ec2_server",
            "aws_internet_gateway.ansible_igw",
            "aws_security_group.ansible_sg",
            "aws_subnet.ansible_subnet",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "apache_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0990239981ca174d7",
            "association_id": "eipassoc-0f3b86d7e78f8736f",
            "domain": "vpc",
            "id": "eipalloc-0990239981ca174d7",
            "instance": "i-07d9d6aa9349b5abe",
            "network_border_group": "sa-east-1",
            "network_interface": "eni-0ba10c0c6cde9ff63",
            "private_dns": "ip-10-0-1-197.sa-east-1.compute.internal",
            "private_ip": "10.0.1.197",
            "public_dns": "ec2-54-207-193-72.sa-east-1.compute.amazonaws.com",
            "public_ip": "54.207.193.72",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.apache_ec2_server",
            "aws_internet_gateway.apache_igw",
            "aws_security_group.apache_sg",
            "aws_subnet.apache_subnet",
            "aws_vpc.apache_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ansible_ec2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090006f29ecb2d79a",
            "arn": "arn:aws:ec2:sa-east-1:013404364960:instance/i-0efe7449b0eb7bd99",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0efe7449b0eb7bd99",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_keys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ddb16572f9ed817d",
            "private_dns": "ip-10-0-1-235.sa-east-1.compute.internal",
            "private_ip": "10.0.1.235",
            "public_ip": "54.94.108.98",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b2c7638d2a6601d4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b75e305d0c9d78b2",
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-066434febe6045b4d"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.ansible_igw",
            "aws_security_group.ansible_sg",
            "aws_subnet.ansible_subnet",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "apache_ec2_server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-090006f29ecb2d79a",
            "arn": "arn:aws:ec2:sa-east-1:013404364960:instance/i-07d9d6aa9349b5abe",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-07d9d6aa9349b5abe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "aws_keys",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ba10c0c6cde9ff63",
            "private_dns": "ip-10-0-1-197.sa-east-1.compute.internal",
            "private_ip": "10.0.1.197",
            "public_ip": "54.207.193.72",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0831ef168857e64cd",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c8de6bc66269ff95",
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-019f2174c8e976d23"
            ]
          },
          "dependencies": [
            "aws_internet_gateway.apache_igw",
            "aws_security_group.apache_sg",
            "aws_subnet.apache_subnet",
            "aws_vpc.apache_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "ansible_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:internet-gateway/igw-09b537600c857fb1e",
            "id": "igw-09b537600c857fb1e",
            "owner_id": "013404364960",
            "vpc_id": "vpc-05dd0deb28f4a7a72"
          },
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "apache_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:internet-gateway/igw-0bf5ffd1a16b3e7bc",
            "id": "igw-0bf5ffd1a16b3e7bc",
            "owner_id": "013404364960",
            "vpc_id": "vpc-0080ecc874b909fd1"
          },
          "dependencies": [
            "aws_vpc.apache_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "ansible_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:route-table/rtb-08fc8640be6fdea95",
            "id": "rtb-08fc8640be6fdea95",
            "owner_id": "013404364960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09b537600c857fb1e",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-05dd0deb28f4a7a72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.ansible_igw",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "apache_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:route-table/rtb-0a9f9123719feeaca",
            "id": "rtb-0a9f9123719feeaca",
            "owner_id": "013404364960",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bf5ffd1a16b3e7bc",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0080ecc874b909fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.apache_igw",
            "aws_vpc.apache_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "ansible_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffc4b0410ba29b99",
            "route_table_id": "rtb-08fc8640be6fdea95",
            "subnet_id": "subnet-0b75e305d0c9d78b2"
          },
          "dependencies": [
            "aws_internet_gateway.ansible_igw",
            "aws_route_table.ansible_route_table",
            "aws_subnet.ansible_subnet",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "apache_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00ee7ee09fcd0e3e5",
            "route_table_id": "rtb-0a9f9123719feeaca",
            "subnet_id": "subnet-0c8de6bc66269ff95"
          },
          "dependencies": [
            "aws_internet_gateway.apache_igw",
            "aws_route_table.apache_route_table",
            "aws_subnet.apache_subnet",
            "aws_vpc.apache_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ansible_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:security-group/sg-066434febe6045b4d",
            "description": "Configure public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-066434febe6045b4d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet Connection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "ansible_sg",
            "name_prefix": "",
            "owner_id": "013404364960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-05dd0deb28f4a7a72"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "apache_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:security-group/sg-019f2174c8e976d23",
            "description": "Configure public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-019f2174c8e976d23",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Internet Connection",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "apache_sg",
            "name_prefix": "",
            "owner_id": "013404364960",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            },
            "timeouts": null,
            "vpc_id": "vpc-0080ecc874b909fd1"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.apache_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "ansible_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:subnet/subnet-0b75e305d0c9d78b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b75e305d0c9d78b2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013404364960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            },
            "vpc_id": "vpc-05dd0deb28f4a7a72"
          },
          "dependencies": [
            "aws_internet_gateway.ansible_igw",
            "aws_vpc.ansible_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "apache_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:subnet/subnet-0c8de6bc66269ff95",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8de6bc66269ff95",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "013404364960",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            },
            "vpc_id": "vpc-0080ecc874b909fd1"
          },
          "dependencies": [
            "aws_internet_gateway.apache_igw",
            "aws_vpc.apache_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "ansible_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:vpc/vpc-05dd0deb28f4a7a72",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00abbbd5d3516c31d",
            "default_route_table_id": "rtb-032c466bbdbde0fea",
            "default_security_group_id": "sg-0eb8f35731eb20faf",
            "dhcp_options_id": "dopt-4a9bce2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-05dd0deb28f4a7a72",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-032c466bbdbde0fea",
            "owner_id": "013404364960",
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "apache_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:013404364960:vpc/vpc-0080ecc874b909fd1",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c28b6a8a6f3de4d4",
            "default_route_table_id": "rtb-0bad0e8341228eadc",
            "default_security_group_id": "sg-03ba50777e12e89ac",
            "dhcp_options_id": "dopt-4a9bce2d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0080ecc874b909fd1",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bad0e8341228eadc",
            "owner_id": "013404364960",
            "tags": {
              "Name": "TerraformApacheServerInstance"
            },
            "tags_all": {
              "Name": "TerraformApacheServerInstance"
            }
          }
        }
      ]
    }
  ]
}